2003-10-07  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* (all files): copied as is from IGUANA Ig_Imports/MemProfLib
