@@ -1,9 +1,9 @@
-#ifndef MEM_PROF_LIB_IG_MPROF_LINEAR_REP_H
-# define MEM_PROF_LIB_IG_MPROF_LINEAR_REP_H
+#ifndef IG_PROF_IG_MPROF_LINEAR_REP_H
+# define IG_PROF_IG_MPROF_LINEAR_REP_H
 
 //<<<<<< INCLUDES                                                       >>>>>>
 
-# include "Ig_Imports/MemProfLib/interface/config.h"
+# include "Ig_Tools/IgProf/interface/config.h"
 # include "IgMProfAllocator.h"
 # include <map>
 
@@ -16,7 +16,7 @@
 
 #define MAX_STACKTRACE_SIZE 11   
 
-class MEM_PROF_LIB_API IgMProfLinearRep
+class IG_PROF_API IgMProfLinearRep
 {
 public:    
     struct AllocationStruct
@@ -60,4 +60,4 @@ public:
 //<<<<<< INLINE PUBLIC FUNCTIONS                                        >>>>>>
 //<<<<<< INLINE MEMBER FUNCTIONS                                        >>>>>>
 
-#endif // MEM_PROF_LIB_IG_MPROF_LINEAR_REP_H
+#endif // IG_PROF_IG_MPROF_LINEAR_REP_H
